--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: ruby
 rvm:
 - 2.1
 
-install: gem install jekyll html-proofer
-script: jekyll build && htmlproof ./_site
+script:
+- bundle exec jekyll build
+- bundle exec htmlproof ./_site --check-favicon --check-html
 
 env:
-  global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+	global:
+	- NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
