--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 exclude: [vendor, CNAME, Gemfile, Gemfile.lock, LICENSE, README.md]
 collections:
 - projects
+sass:
+	sass_dir: css
+	style: :compressed
