--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 
 script:
 - bundle exec jekyll build
-- bundle exec htmlproof ./_site --check-favicon --check-html
+- bundle exec htmlproofer ./_site --check-favicon --check-html
 
 env:
   global:
