Don't validate URLs to LinkedIn
LinkedIn blocks all requests from Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 
 script:
 - bundle exec jekyll build
-- bundle exec htmlproofer ./_site --check-favicon --check-html
+- bundle exec htmlproofer ./_site --check-favicon --check-html --url-ignore www.linkedin.com
 
 env:
   global:
