update Jekyll to 3.1.6 (latest version on GitHub Pages); remove id field from projects

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@ safe: true
 lsi: false
 source: .
 
-# Github Defaults
-markdown:    kramdown
-highlighter: rouge
-#github: [Repository metadata]
+# Github Defaults (Not modifiable)
+# markdown:    kramdown
+# highlighter: rouge
+# github: [Repository metadata]
 
 exclude:
   - vendor
