--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ highlighter: rouge
 # SEO Settings
 title: Mark Monteiro
 description: Mark Monteiro is a software engineer and web developer recently graduated from the University of Waterloo. This is his personal resume website.
-url: markmonteiro.info
+url: http://markmonteiro.info
 logo: /favicon-194x194.png
 google_analytics_code: UA-7688784-3
 
