--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ sass:
 # Plugins supported by Github Pages
 gems:
   - jekyll-seo-tag
+  - jekyll-sitemap
 #- jekyll-mentions
 #- jemoji
 #- jekyll-redirect-from
-#- jekyll-sitemap
 #- jekyll-feed
