Use gulp to run browsersync in order to specify _site as the root folder

--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,14 @@ defaults:
       comments: true
 
 exclude:
+  - node_modules
   - vendor
   - CNAME
   - Gemfile
   - Gemfile.lock
   - LICENSE
   - README.md
+  
 collections:
   - projects
   - experiences
