--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ script:
 env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+cache:
+  directories:
+    # Cache html-proofer results. See: https://github.com/gjtorikian/html-proofer#caching-with-travis
+    - $TRAVIS_BUILD_DIR/tmp/.htmlproofer
