--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,9 @@
     "[markdown]": {
         "editor.rulers": [80]
     },
+    "[html]": {
+        "editor.rulers": [120]
+    },
     "cSpell.words": [
         "Countify",
         "Innovaction",
