Update README instructions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "Ontarians",
         "PDFs",
         "Renoworks",
+        "Rubygems",
         "Tarion",
         "deafblind",
         "rebranded",
