Update spellcheck file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "Rubygems",
         "Tarion",
         "deafblind",
+        "endcase",
         "rebranded",
         "templating"
     ]
