Update spellcheck file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,9 +19,11 @@
     },
     "cSpell.words": [
         "Countify",
+        "HMIs",
         "Innovaction",
         "Jira",
         "Laravel",
+        "Monteiro",
         "Multify",
         "Ontarians",
         "PDFs",
@@ -31,6 +33,7 @@
         "deafblind",
         "endcase",
         "rebranded",
-        "templating"
+        "templating",
+        "wireframe"
     ]
 }
