Fix new stylelint issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "endcase",
         "polyfill",
         "rebranded",
+        "stylelint",
         "templating",
         "wireframe"
     ]
